--- a/css/style.scss
+++ b/css/style.scss
@@ -118,7 +118,7 @@ body {
 #hero {
   /* border: 4px solid red; */
   background-color: pink;
-  background-image: url(../img/mainbg.png);
+  background-image: url(img/mainbg.png);
   height: 400px;
   background-size: cover;
   background-position: center top;
@@ -231,23 +231,23 @@ h3 {
 }
 
 #img4-img1 {
-  background-image: url(../img/about_04.jpg);
+  background-image: url(img/about_04.jpg);
   width: 250px;
 }
 
 
 #img4-img2 {
-  background-image: url(../img/about_03.jpg);
+  background-image: url(img/about_03.jpg);
   width: 300px;
 }
 
 #img4-img3 {
-  background-image: url(../img/about_02.jpg);
+  background-image: url(img/about_02.jpg);
   width: 300px;
 }
 
 #img4-img4 {
-  background-image: url(../img/about_01.jpg);
+  background-image: url(img/about_01.jpg);
   width: 250px;
 }
 
