--- a/css/main.css
+++ b/css/main.css
@@ -558,7 +558,7 @@ input[type=radio] + label:before {
 }
 .image:before {
   pointer-events: none;
-  background-image: url("/images/overlay.png");
+  background-image: url("images/overlay.png");
   background-color: rgba(24, 25, 19, 0.5);
   border-radius: 4px;
   content: "";
@@ -954,7 +954,7 @@ button {
 #bg:before {
   transition: background-color 1.5s ease-in-out;
   transition-delay: 0.75s;
-  background-image: linear-gradient(to top, rgba(24, 25, 19, 0.5), rgba(24, 25, 19, 0.5)), url("/images/overlay.png");
+  background-image: linear-gradient(to top, rgba(24, 25, 19, 0.5), rgba(24, 25, 19, 0.5)), url("images/overlay.png");
   background-size: auto, 256px 256px;
   background-position: center, center;
   background-repeat: no-repeat, repeat;
@@ -963,7 +963,7 @@ button {
 #bg:after {
   transform: scale(1.125);
   transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out;
-  background-image: url("/img/mainbg.png");
+  background-image: url("img/mainbg.png");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
