--- a/assets/sass/main.css
+++ b/assets/sass/main.css
@@ -113,7 +113,7 @@ html {
 }
 
 body, input, select, textarea {
-  color: rgba(255, 255, 255, 0.9058823529);
+  color: #ffffff;
   font-family: "Source Sans Pro", sans-serif;
   font-weight: 300;
   font-size: 1rem;
@@ -122,7 +122,7 @@ body, input, select, textarea {
 
 a {
   transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
-  border-bottom: dotted 1px rgba(208, 205, 26, 0.745);
+  border-bottom: dotted 1px rgba(255, 255, 255, 0.5);
   text-decoration: none;
   color: inherit;
 }
@@ -131,7 +131,7 @@ a:hover {
 }
 
 strong, b {
-  color: #ffd61a;
+  color: #ffffff;
   font-weight: 600;
 }
 
@@ -144,7 +144,7 @@ p {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color: #ffd61a;
+  color: #ffffff;
   font-weight: 600;
   line-height: 1.5;
   margin: 0 0 1rem 0;
@@ -156,7 +156,7 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
   text-decoration: none;
 }
 h1.major, h2.major, h3.major, h4.major, h5.major, h6.major {
-  border-bottom: solid 1px #ffd61a;
+  border-bottom: solid 1px #ffffff;
   width: -moz-max-content;
   width: -ms-max-content;
   width: max-content;
@@ -215,14 +215,14 @@ sup {
 }
 
 blockquote {
-  border-left: solid 4px #ffd61a;
+  border-left: solid 4px #ffffff;
   font-style: italic;
   margin: 0 0 2rem 0;
   padding: 0.5rem 0 0.5rem 2rem;
 }
 
 code {
-  background: rgba(154, 154, 120, 0.303);
+  background: rgba(255, 255, 255, 0.075);
   border-radius: 4px;
   font-family: "Courier New", monospace;
   font-size: 0.9rem;
@@ -245,7 +245,7 @@ pre code {
 
 hr {
   border: 0;
-  border-bottom: solid 1px #ffd61a;
+  border-bottom: solid 1px #ffffff;
   margin: 2.75rem 0;
 }
 
@@ -315,7 +315,7 @@ form > .fields > .field.quarter {
 }
 
 label {
-  color: #ffd61a;
+  color: #ffffff;
   display: block;
   font-size: 0.8rem;
   font-weight: 300;
@@ -337,7 +337,7 @@ textarea {
   transition: border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out, background-color 0.2s ease-in-out;
   background-color: transparent;
   border-radius: 4px;
-  border: solid 1px #ffd61a;
+  border: solid 1px #ffffff;
   color: inherit;
   display: block;
   outline: 0;
@@ -359,13 +359,13 @@ input[type=email]:focus,
 input[type=tel]:focus,
 select:focus,
 textarea:focus {
-  background: rgba(154, 154, 120, 0.303);
-  border-color: #ffd61a;
-  box-shadow: 0 0 0 1px #ffd61a;
+  background: rgba(255, 255, 255, 0.075);
+  border-color: #ffffff;
+  box-shadow: 0 0 0 1px #ffffff;
 }
 
 select {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' preserveAspectRatio='none' viewBox='0 0 40 40'%3E%3Cpath d='M9.4,12.3l10.4,10.4l10.4-10.4c0.2-0.2,0.5-0.4,0.9-0.4c0.3,0,0.6,0.1,0.9,0.4l3.3,3.3c0.2,0.2,0.4,0.5,0.4,0.9 c0,0.4-0.1,0.6-0.4,0.9L20.7,31.9c-0.2,0.2-0.5,0.4-0.9,0.4c-0.3,0-0.6-0.1-0.9-0.4L4.3,17.3c-0.2-0.2-0.4-0.5-0.4-0.9 c0-0.4,0.1-0.6,0.4-0.9l3.3-3.3c0.2-0.2,0.5-0.4,0.9-0.4S9.1,12.1,9.4,12.3z' fill='%23ffd61a' /%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' preserveAspectRatio='none' viewBox='0 0 40 40'%3E%3Cpath d='M9.4,12.3l10.4,10.4l10.4-10.4c0.2-0.2,0.5-0.4,0.9-0.4c0.3,0,0.6,0.1,0.9,0.4l3.3,3.3c0.2,0.2,0.4,0.5,0.4,0.9 c0,0.4-0.1,0.6-0.4,0.9L20.7,31.9c-0.2,0.2-0.5,0.4-0.9,0.4c-0.3,0-0.6-0.1-0.9-0.4L4.3,17.3c-0.2-0.2-0.4-0.5-0.4-0.9 c0-0.4,0.1-0.6,0.4-0.9l3.3-3.3c0.2-0.2,0.5-0.4,0.9-0.4S9.1,12.1,9.4,12.3z' fill='%23ffffff' /%3E%3C/svg%3E");
   background-size: 1.25rem;
   background-repeat: no-repeat;
   background-position: calc(100% - 1rem) center;
@@ -374,7 +374,7 @@ select {
   text-overflow: ellipsis;
 }
 select option {
-  color: rgba(255, 255, 255, 0.9058823529);
+  color: #ffffff;
   background: #1b1f22;
 }
 select:focus::-ms-value {
@@ -413,7 +413,7 @@ input[type=radio] + label {
   -moz-user-select: none;
   -webkit-user-select: none;
   user-select: none;
-  color: rgba(255, 255, 255, 0.9058823529);
+  color: #ffffff;
   cursor: pointer;
   display: inline-block;
   font-size: 0.8rem;
@@ -440,7 +440,7 @@ input[type=checkbox] + label:before,
 input[type=radio] + label:before {
   transition: border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out, background-color 0.2s ease-in-out;
   border-radius: 4px;
-  border: solid 1px #ffd61a;
+  border: solid 1px #ffffff;
   content: "";
   display: inline-block;
   height: 1.65rem;
@@ -453,16 +453,16 @@ input[type=radio] + label:before {
 }
 input[type=checkbox]:checked + label:before,
 input[type=radio]:checked + label:before {
-  background: #ffd61a !important;
-  border-color: #ffd61a !important;
+  background: #ffffff !important;
+  border-color: #ffffff !important;
   color: #1b1f22;
   content: "\f00c";
 }
 input[type=checkbox]:focus + label:before,
 input[type=radio]:focus + label:before {
-  background: rgba(154, 154, 120, 0.303);
-  border-color: #ffd61a;
-  box-shadow: 0 0 0 1px #ffd61a;
+  background: rgba(255, 255, 255, 0.075);
+  border-color: #ffffff;
+  box-shadow: 0 0 0 1px #ffffff;
 }
 
 input[type=checkbox] + label:before {
@@ -474,34 +474,34 @@ input[type=radio] + label:before {
 }
 
 ::-webkit-input-placeholder {
-  color: rgba(208, 205, 26, 0.745) !important;
+  color: rgba(255, 255, 255, 0.5) !important;
   opacity: 1;
 }
 
 :-moz-placeholder {
-  color: rgba(208, 205, 26, 0.745) !important;
+  color: rgba(255, 255, 255, 0.5) !important;
   opacity: 1;
 }
 
 ::-moz-placeholder {
-  color: rgba(208, 205, 26, 0.745) !important;
+  color: rgba(255, 255, 255, 0.5) !important;
   opacity: 1;
 }
 
 :-ms-input-placeholder {
-  color: rgba(208, 205, 26, 0.745) !important;
+  color: rgba(255, 255, 255, 0.5) !important;
   opacity: 1;
 }
 
 .formerize-placeholder {
-  color: rgba(208, 205, 26, 0.745) !important;
+  color: rgba(255, 255, 255, 0.5) !important;
   opacity: 1;
 }
 
 /* Box */
 .box {
   border-radius: 4px;
-  border: solid 1px #ffd61a;
+  border: solid 1px #ffffff;
   margin-bottom: 2rem;
   padding: 1.5em;
 }
@@ -556,8 +556,8 @@ input[type=radio] + label:before {
 }
 .image:before {
   pointer-events: none;
-  background-image: url("images/overlay.png");
-  background-color: rgba(24, 25, 19, 0.5);
+  background-image: url("../../images/overlay.png");
+  background-color: rgba(19, 21, 25, 0.5);
   border-radius: 4px;
   content: "";
   display: block;
@@ -571,6 +571,10 @@ input[type=radio] + label:before {
 .image img {
   border-radius: 4px;
   display: block;
+  position: fixed;
+  top: 8px;
+  left: 8px;
+  width: 35%;
 }
 .image.left, .image.right {
   max-width: 40%;
@@ -638,7 +642,7 @@ ul.alt {
   padding-left: 0;
 }
 ul.alt li {
-  border-top: solid 1px #ffd61a;
+  border-top: solid 1px #ffffff;
   padding: 0.5em 0;
 }
 ul.alt li:first-child {
@@ -764,7 +768,7 @@ ul.icons li:last-child {
 }
 ul.icons li a {
   border-radius: 100%;
-  box-shadow: inset 0 0 0 1px #ffd61a;
+  box-shadow: inset 0 0 0 1px #ffffff;
   display: inline-block;
   height: 2.25rem;
   line-height: 2.25rem;
@@ -772,10 +776,10 @@ ul.icons li a {
   width: 2.25rem;
 }
 ul.icons li a:hover {
-  background-color: rgba(154, 154, 120, 0.303);
+  background-color: rgba(255, 255, 255, 0.075);
 }
 ul.icons li a:active {
-  background-color: rgba(99, 102, 9, 0.175);
+  background-color: rgba(255, 255, 255, 0.175);
 }
 
 /* Table */
@@ -789,34 +793,34 @@ table {
   width: 100%;
 }
 table tbody tr {
-  border: solid 1px #ffd61a;
+  border: solid 1px #ffffff;
   border-left: 0;
   border-right: 0;
 }
 table tbody tr:nth-child(2n+1) {
-  background-color: rgba(154, 154, 120, 0.303);
+  background-color: rgba(255, 255, 255, 0.075);
 }
 table td {
   padding: 0.75em 0.75em;
 }
 table th {
-  color: #ffd61a;
+  color: #ffffff;
   font-size: 0.9em;
   font-weight: 600;
   padding: 0 0.75em 0.75em 0.75em;
   text-align: left;
 }
 table thead {
-  border-bottom: solid 2px #ffd61a;
+  border-bottom: solid 2px #ffffff;
 }
 table tfoot {
-  border-top: solid 2px #ffd61a;
+  border-top: solid 2px #ffffff;
 }
 table.alt {
   border-collapse: separate;
 }
 table.alt tbody tr td {
-  border: solid 1px #ffd61a;
+  border: solid 1px #ffffff;
   border-left-width: 0;
   border-top-width: 0;
 }
@@ -846,8 +850,8 @@ button,
   background-color: transparent;
   border-radius: 4px;
   border: 0;
-  box-shadow: inset 0 0 0 1px #ffd61a;
-  color: #ffd61a !important;
+  box-shadow: inset 0 0 0 1px #ffffff;
+  color: #ffffff !important;
   cursor: pointer;
   display: inline-block;
   font-size: 0.8rem;
@@ -867,14 +871,14 @@ input[type=reset]:hover,
 input[type=button]:hover,
 button:hover,
 .button:hover {
-  background-color: rgba(154, 154, 120, 0.303);
+  background-color: rgba(255, 255, 255, 0.075);
 }
 input[type=submit]:active,
 input[type=reset]:active,
 input[type=button]:active,
 button:active,
 .button:active {
-  background-color: rgba(99, 102, 9, 0.175);
+  background-color: rgba(255, 255, 255, 0.175);
 }
 input[type=submit].icon:before,
 input[type=reset].icon:before,
@@ -904,7 +908,7 @@ input[type=reset].primary,
 input[type=button].primary,
 button.primary,
 .button.primary {
-  background-color: #ffd61a;
+  background-color: #ffffff;
   color: #1b1f22 !important;
   font-weight: 600;
 }
@@ -950,9 +954,9 @@ button {
   height: 100%;
 }
 #bg:before {
-  transition: background-color 1.5s ease-in-out;
+  transition: background-color 2.5s ease-in-out;
   transition-delay: 0.75s;
-  background-image: linear-gradient(to top, rgba(24, 25, 19, 0.5), rgba(24, 25, 19, 0.5)), url("images/overlay.png");
+  background-image: linear-gradient(to top, rgba(19, 21, 25, 0.5), rgba(19, 21, 25, 0.5)), url("../../images/overlay.png");
   background-size: auto, 256px 256px;
   background-position: center, center;
   background-repeat: no-repeat, repeat;
@@ -961,7 +965,7 @@ button {
 #bg:after {
   transform: scale(1.125);
   transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out;
-  background-image: url("img/mainbg.png");
+  background-image: url("/img/mainbg.png");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -1044,7 +1048,7 @@ body.is-preload #bg:before {
   left: calc(50% - 1px);
   width: 1px;
   height: calc(3.5rem + 1px);
-  background: #ffd61a;
+  background: #ffffff;
 }
 #header > :first-child {
   margin-top: 0;
@@ -1056,7 +1060,7 @@ body.is-preload #bg:before {
   width: 5.5rem;
   height: 5.5rem;
   line-height: 5.5rem;
-  border: solid 1px #ffd61a;
+  border: solid 1px #ffffff;
   border-radius: 100%;
 }
 #header .logo .icon:before {
@@ -1064,7 +1068,7 @@ body.is-preload #bg:before {
 }
 #header .content {
   border-style: solid;
-  border-color: #ffd61a;
+  border-color: #ffffff;
   border-top-width: 1px;
   border-bottom-width: 1px;
   max-width: 100%;
@@ -1097,12 +1101,12 @@ body.is-preload #bg:before {
   margin-bottom: 0;
   list-style: none;
   padding-left: 0;
-  border: solid 1px #ffd61a;
+  border: solid 1px #ffffff;
   border-radius: 4px;
 }
 #header nav ul li {
   padding-left: 0;
-  border-left: solid 1px #ffd61a;
+  border-left: solid 1px #ffffff;
 }
 #header nav ul li:first-child {
   border-left: 0;
@@ -1119,10 +1123,10 @@ body.is-preload #bg:before {
   border-bottom: 0;
 }
 #header nav ul li a:hover {
-  background-color: rgba(154, 154, 120, 0.303);
+  background-color: rgba(255, 255, 255, 0.075);
 }
 #header nav ul li a:active {
-  background-color: rgba(99, 102, 9, 0.175);
+  background-color: rgba(255, 255, 255, 0.175);
 }
 #header nav.use-middle:after {
   content: "";
@@ -1132,7 +1136,7 @@ body.is-preload #bg:before {
   left: calc(50% - 1px);
   width: 1px;
   height: 100%;
-  background: #ffd61a;
+  background: #ffffff;
 }
 #header nav.use-middle ul li.is-middle {
   border-left: 0;
@@ -1201,7 +1205,7 @@ body.is-preload #header .content .inner {
   }
   #header nav ul li {
     border-left: 0;
-    border-top: solid 1px #ffd61a;
+    border-top: solid 1px #ffffff;
   }
   #header nav ul li:first-child {
     border-top: 0;
@@ -1277,15 +1281,15 @@ body.is-preload #header .content .inner {
   height: 2.5rem;
   border-radius: 100%;
   background-position: center;
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='20px' height='20px' viewBox='0 0 20 20' zoomAndPan='disable'%3E%3Cstyle%3Eline %7B stroke: %23ffd61a%3B stroke-width: 1%3B %7D%3C/style%3E%3Cline x1='2' y1='2' x2='18' y2='18' /%3E%3Cline x1='18' y1='2' x2='2' y2='18' /%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='20px' height='20px' viewBox='0 0 20 20' zoomAndPan='disable'%3E%3Cstyle%3Eline %7B stroke: %23ffffff%3B stroke-width: 1%3B %7D%3C/style%3E%3Cline x1='2' y1='2' x2='18' y2='18' /%3E%3Cline x1='18' y1='2' x2='2' y2='18' /%3E%3C/svg%3E");
   background-size: 20px 20px;
   background-repeat: no-repeat;
 }
 #main article .close:hover:before {
-  background-color: rgba(154, 154, 120, 0.303);
+  background-color: rgba(255, 255, 255, 0.075);
 }
 #main article .close:active:before {
-  background-color: rgba(99, 102, 9, 0.175);
+  background-color: rgba(255, 255, 255, 0.175);
 }
 @media screen and (max-width: 736px) {
   #main article {
@@ -1329,17 +1333,4 @@ body.is-article-visible #footer {
 }
 body.is-preload #footer {
   opacity: 0;
-}
-
-img {
-  -o-object-fit: cover;
-     object-fit: cover;
-  width: 100%;
-}
-
-.headlog {
-  position: fixed;
-  top: 8px;
-  left: 8px;
-  width: 35%;
 }/*# sourceMappingURL=main.css.map */
