--- a/slick/slick-theme.css
+++ b/slick/slick-theme.css
@@ -51,7 +51,7 @@
   font-family: "slick";
   font-size: 20px;
   line-height: 1;
-  color: rgba(255, 255, 204, 0.8);
+  color: red;
   opacity: 0.75;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -147,5 +147,4 @@
 .slick-dots li.slick-active button:before {
   color: black;
   opacity: 0.75;
-}
-/*# sourceMappingURL=slick-theme.css.map */
+}/*# sourceMappingURL=slick-theme.css.map */
