--- a/css/style.scss
+++ b/css/style.scss
@@ -118,7 +118,7 @@ body {
 #hero {
   /* border: 4px solid red; */
   background-color: pink;
-  background-image: url(img/mainbg.png);
+  background-image: url(../img/mainbg.png);
   height: 400px;
   background-size: cover;
   background-position: center top;
